Merge pull request #157
* test: 기본 테스트 에러 해결

* style: 토큰 null, blank 검증기능 인라인으로 처리하도록 수정

* chore: gradle 버전생략하도록 수정

* style: 상수 분리 및 메서드명 번경

* style: 사용하지 않는 class파일 삭제

* refactor: 빈등록 메서드 활용해 인터셉터 수정하도록 수정

* feat: 로그인시, 입력값에 대한 검증 기능 추가

* fix: 서버 내부 에러 500내려 주는 것으로 수정

* style: ResponseEntity return 형태 간단하게 변경

* style: 가독성 위해 .orElseThrow() 개행

* docs: 기능 요구 사항 팀 컨벤션 맞게 수정

* refactor: AuthService CustomerService가 아닌 CustomerDao 의존하도록 수정

* test: 테스트 네이밍 변경및 추가

* style: 가독성위해 newCustomer 번수 추출

* test: test 가독성위해 auth.sql 삭제하고 setUp에서 직접 넣어주도록 처리

* refactor: long -> Long

* style: 변수 추출 정리

* style: package 구조 변경

* feat: Email, Password 값 객체 생성 및 이메일 형식 검증 추가

* refactor: 로그인 시, 에러 종류 통일

* refactor: 예외응답코드 수정

* feat: password 최대 길이 추가

* docs: 2단계 기능 요구 사항 추가

* feat: Product 관련 기능 추가

* style:CustomerResponse package 올바른 곳으로 이동

* refactor: 상품 없는 예외 응답코드 수정

* refactor: RowMapper 상수화

* test: 바뀐 응답코드 테스트에도 적용

* feat: Cart 기능 구현

* feat: Orders 기능 구현

* chore: dto package 한 곳으로 이동

* test: OrderControllerTest 오류 해결

* test: 상품조회 페이징 처리 기능 추가

* fix: 비밀번호 검증 로직 에러 해결 및 비밀번호 암호화 규정 강화

* feat: mysql 의존성 추가

* refactor: properties 파일 initialization 옵션 삭제

* feat: 로그 추가

* refactor: sql 테이블 이름 소문자로 수정

* feat: cors에러 해결 기능 추가

* refactor: 제품 목록 조회 totalCount 전체 목록 개수 주는 것을 수정

* refactor: CartResponse productId추가

* test: config 테스트 에러 해결

* test: 예외 사랑 테스트 추가

* feat: request 검증값 메시지 설정

* test: Orders test 작성

* test: CartServiceTest 작성

* style: PasswordInvalidException 네이밍 영어 오타 수정

* refactor: CartService 예외 처리 및 테스트 추가

* refactor: Transactional 누락된 것 추가

* refactor: email unique key로 등록

* refactor: exception 명확하게 수정

* refactor: service class 전체에서 transaction 처리 통일

* refactor: .orElseThrow()로 변경

* refactor: dao valid로직 조회로직으로 변경

* fix: 중복확인 로직 에러 해결

* refactor: 예외 상속구조 세분화

* test: orderServiceTest 추가