@@ -1,43 +1,23 @@
 package woowacourse.shoppingcart.ui;
 
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.when;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.header;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
-import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.http.MediaType;
-import org.springframework.test.web.servlet.MockMvc;
 import woowacourse.shoppingcart.application.OrderService;
-import woowacourse.shoppingcart.domain.OrderDetail;
-import woowacourse.shoppingcart.domain.Orders;
-import woowacourse.shoppingcart.dto.OrderRequest;
+import woowacourse.shoppingcart.dto.request.OrderRequest;
+import woowacourse.shoppingcart.dto.response.OrderDetailResponse;
+import woowacourse.shoppingcart.dto.response.OrdersResponse;
 
-@SpringBootTest
-@AutoConfigureMockMvc
-@Disabled
-public class OrderControllerTest {
-
-    @Autowired
-    private MockMvc mockMvc;
-
-    @Autowired
-    private ObjectMapper objectMapper;
+public class OrderControllerTest extends ControllerTest {
 
     @MockBean
     private OrderService orderService;
@@ -50,44 +30,38 @@ public class OrderControllerTest {
         final int quantity = 5;
         final Long cartId2 = 1L;
         final int quantity2 = 5;
-        final String customerName = "pobi";
-        final List<OrderRequest> requestDtos =
-                Arrays.asList(new OrderRequest(cartId, quantity), new OrderRequest(cartId2, quantity2));
+        final List<OrderRequest> requestDtos = Arrays
+                .asList(new OrderRequest(cartId, quantity), new OrderRequest(cartId2, quantity2));
 
         final Long expectedOrderId = 1L;
-        when(orderService.addOrder(any(), eq(customerName)))
+        when(orderService.addOrder(any(), any()))
                 .thenReturn(expectedOrderId);
 
         // when // then
-        mockMvc.perform(post("/api/customers/" + customerName + "/orders")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .characterEncoding("UTF-8")
-                        .content(objectMapper.writeValueAsString(requestDtos))
-                ).andDo(print())
+        mockMvc.perform(postWithToken("/api/customer/orders", TOKEN, requestDtos)
+        ).andDo(print())
                 .andExpect(status().isCreated())
-                .andExpect(header().exists("Location"))
-                .andExpect(header().string("Location",
-                        "/api/" + customerName + "/orders/" + expectedOrderId));
+                .andExpect(header().exists("Location"));
     }
 
-    @DisplayName("사용자 이름과 주문 ID를 통해 단일 주문 내역을 조회하면, 단일 주문 내역을 받는다.")
+    @DisplayName("토큰과 함께 주문 ID를 통해 단일 주문 내역을 조회하면, 단일 주문 내역을 받는다.")
     @Test
     void findOrder() throws Exception {
-
         // given
-        final String customerName = "pobi";
         final Long orderId = 1L;
-        final Orders expected = new Orders(orderId,
-                Collections.singletonList(new OrderDetail(2L, 1_000, "banana", "imageUrl", 2)));
+        final int totalPrice = 2000;
+        final OrdersResponse expected = new OrdersResponse(orderId, totalPrice,
+                List.of(new OrderDetailResponse(2L, 2, 1_000, "banana", "imageUrl")));
 
-        when(orderService.findOrderById(customerName, orderId))
+        when(orderService.findOrderById(any(), any()))
                 .thenReturn(expected);
 
         // when // then
-        mockMvc.perform(get("/api/customers/" + customerName + "/orders/" + orderId)
-                ).andDo(print())
+        mockMvc.perform(getWithToken("/api/customer" + "/orders/" + orderId, TOKEN)
+        ).andDo(print())
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("id").value(orderId))
+                .andExpect(jsonPath("totalPrice").value(totalPrice))
                 .andExpect(jsonPath("orderDetails[0].productId").value(2L))
                 .andExpect(jsonPath("orderDetails[0].price").value(1_000))
                 .andExpect(jsonPath("orderDetails[0].name").value("banana"))
@@ -95,26 +69,24 @@ public class OrderControllerTest {
                 .andExpect(jsonPath("orderDetails[0].quantity").value(2));
     }
 
-    @DisplayName("사용자 이름을 통해 주문 내역 목록을 조회하면, 주문 내역 목록을 받는다.")
+    @DisplayName("토큰과 함께 주문 내역 목록을 조회하면, 주문 내역 목록을 받는다.")
     @Test
     void findOrders() throws Exception {
         // given
-        final String customerName = "pobi";
-        final List<Orders> expected = Arrays.asList(
-                new Orders(1L, Collections.singletonList(
-                        new OrderDetail(1L, 1_000, "banana", "imageUrl", 2))),
-                new Orders(2L, Collections.singletonList(
-                        new OrderDetail(2L, 2_000, "apple", "imageUrl2", 4)))
+        final List<OrdersResponse> expected = Arrays.asList(
+                new OrdersResponse(1L, 2000, List.of(new OrderDetailResponse(1L, 2, 1_000, "banana", "imageUrl"))),
+                new OrdersResponse(2L, 8000, List.of(new OrderDetailResponse(2L, 4, 2_000, "apple", "imageUrl2")))
         );
 
-        when(orderService.findOrdersByCustomerName(customerName))
+        when(orderService.findOrdersByCustomerId(any()))
                 .thenReturn(expected);
 
         // when // then
-        mockMvc.perform(get("/api/customers/" + customerName + "/orders/")
-                ).andDo(print())
+        mockMvc.perform(getWithToken("/api/customer" + "/orders", TOKEN)
+        ).andDo(print())
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$[0].id").value(1L))
+                .andExpect(jsonPath("$[0].totalPrice").value(2000))
                 .andExpect(jsonPath("$[0].orderDetails[0].productId").value(1L))
                 .andExpect(jsonPath("$[0].orderDetails[0].price").value(1_000))
                 .andExpect(jsonPath("$[0].orderDetails[0].name").value("banana"))
@@ -122,6 +94,7 @@ public class OrderControllerTest {
                 .andExpect(jsonPath("$[0].orderDetails[0].quantity").value(2))
 
                 .andExpect(jsonPath("$[1].id").value(2L))
+                .andExpect(jsonPath("$[1].totalPrice").value(8000))
                 .andExpect(jsonPath("$[1].orderDetails[0].productId").value(2L))
                 .andExpect(jsonPath("$[1].orderDetails[0].price").value(2_000))
                 .andExpect(jsonPath("$[1].orderDetails[0].name").value("apple"))
